# access

./: CMakeLists.txt  Makefile  README.md  build.sh  cmake_install.cmake  compilar.sh  compilar.txt  config.json  git.md  imgui.ini  otmizações.txt
include/: chat_app.h  diff_viewer.h  lm_client.h  semantic_search.h  tools.h
src/: chat_app.cpp  chat_app.hpp  diff_viewer.cpp  lm_client.cpp  lm_client.hpp  main.cpp  semantic_search.cpp  tools.cpp  tools.hpp
